--- a/MyChatApp/app/src/main/res/layout/activity_main.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="com.example.suny.mychatapp.MainActivity">
+    tools:context="com.example.suny.mychatapp.activities.MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
