--- a/MyChatApp/app/src/main/res/layout/activity_profile.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_profile.xml
@@ -4,75 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.suny.mychatapp.activities.SettingsActivity">
+    android:background="@drawable/bg"
+    tools:context="com.example.suny.mychatapp.activities.ProfileActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/settingsProfileId"
+        android:id="@+id/userProfileImage"
         android:layout_width="155dp"
         android:layout_height="129dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/profile_img"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/happy_woman"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
-        android:id="@+id/settingsDisplayNameId"
-        android:layout_width="155dp"
+        android:id="@+id/profileName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:text="Display Name"
+        android:text="TextView"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settingsProfileId" />
+        app:layout_constraintTop_toBottomOf="@+id/userProfileImage" />
 
     <TextView
-        android:id="@+id/settingStatus"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:id="@+id/profileStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:text="Hey...I am happy"
+        android:layout_marginTop="32dp"
+        android:text="TextView"
         android:textAlignment="center"
+        android:textSize="14sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settingsDisplayNameId" />
+        app:layout_constraintTop_toBottomOf="@+id/profileName" />
 
     <Button
-        android:id="@+id/changeProfileBtnId"
-        android:layout_width="200dp"
+        android:id="@+id/profileSendMessageBtn"
+        android:layout_width="165dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="38dp"
-        android:text="@string/change_profile"
+        android:layout_marginTop="32dp"
+        android:background="@color/colorAccent"
+        android:stateListAnimator="@drawable/state_list_animator_z"
+        android:text="Send Message"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settingStatus"
-        android:stateListAnimator="@drawable/state_list_animator_z"
-        android:background="@drawable/bt_shape"/>
-
-    <Button
-        android:id="@+id/changeStatusBtnId"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/change_status"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changeProfileBtnId"
-        android:stateListAnimator="@drawable/state_list_animator_z"
-        android:background="@drawable/bt_shape"/>
-
-
+        app:layout_constraintTop_toBottomOf="@+id/profileStatus" />
 </android.support.constraint.ConstraintLayout>
