--- a/MyChatApp/app/src/main/res/layout/activity_chat.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_chat.xml
@@ -1,9 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#cccc"
     tools:context="com.example.suny.mychatapp.activities.ChatActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/messageRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="5dp"
+        android:layout_above="@id/linerLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:weightSum="10"
+        android:background="@color/grey_100"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linerLayout"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/addMessageImageView"
+            android:layout_weight="1"
+            android:layout_gravity="bottom"
+            android:background="@drawable/ic_add_black_24dp"
+            android:layout_width="55dp"
+            android:layout_height="48dp" />
+
+        <EditText
+            android:id="@+id/messageEdt"
+            android:layout_weight="8"
+            android:padding="10dp"
+            android:textSize="15sp"
+            android:layout_gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="44dp" />
+        
+        <Button
+            android:id="@+id/sendButton"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:background="@drawable/ic_send_black_24dp"
+            android:layout_width="48dp"
+            android:layout_height="40dp" />
+
+
+    </LinearLayout>
+
+
+</RelativeLayout>
