--- a/TaskManagerApp/app/src/main/res/layout/activity_tasks.xml
+++ b/TaskManagerApp/app/src/main/res/layout/activity_tasks.xml
@@ -30,6 +30,6 @@
         app:backgroundTint="@android:color/holo_blue_bright"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@android:drawable/ic_menu_edit" />
 
 </android.support.constraint.ConstraintLayout>
