--- a/MyChatApp/app/src/main/res/layout/users_row.xml
+++ b/MyChatApp/app/src/main/res/layout/users_row.xml
@@ -11,7 +11,9 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="5dp"
+        android:backgroundTint="@color/bgColor">
 
         <RelativeLayout
             android:layout_width="match_parent"
