--- a/MyChatApp/app/src/main/res/layout/activity_create_account.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_create_account.xml
@@ -29,13 +29,13 @@
                 android:layout_height="80dp" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="10dp"
-                android:textColor="#fff"
                 android:text="Create a New Account"
-                android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:orientation="vertical"
